# little-annoy

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: fmt-and-lint.yml
benches/benchmarks/: simple.rs
examples/: demo.rs  duplicate_image.rs  hamming.rs  minist.rs
little_annoy/: Cargo.toml  README.md
little_annoy/benches/: bench_main.rs
little_annoy/benches/benchmarks/: simple.rs
little_annoy/examples/: demo.rs  duplicate_image.rs  save_load.rs
little_annoy/src/: ann.rs  float.rs  integer.rs  item.rs  lib.rs
little_annoy/src/distance/: angular.rs  euclidean.rs  hamming.rs  manhattan.rs  mod.rs
little_annoy_wasm/: Cargo.toml
little_annoy_wasm/src/: lib.rs
src/: ann.rs  distance.rs  lib.rs  main.rs  node.rs
src/distance/: euclidean.rs  hamming.rs  manhattan.rs  mod.rs
