[package]
name = "little-annoy"
version = "0.1.0"
authors = ["uzushino <torattoria.mamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
num = "0.4"
num-traits = "0.2.15"
rayon = { version = "*", optional = true }
rand_chacha = "*"
# tokio = { version = "*", features = ["rt"] }
async-std = "*"
lockable = "0.0.6"


[dev-dependencies]
mnist = "0.4.1"
rulinalg = "*"
criterion = "0.3"
img_hash = "3.0"
image = "*"
bit-vec = "*"

[[bench]]
name = "bench_main"
harness = false

[features]
default = []
parallel_build = [ "rayon" ]
